<resources>
    <string name="app_name">P4ConstraintLayout</string>
    <string name="box_one">Box One</string>
    <string name="boxTwoTxt">Box Two</string>
    <string name="BoxThreeTxt">Box Three</string>
    <string name="BoxFourTxt">Box Four</string>
    <string name="BoxFiveTxt">Box Five</string>
    <string name="how_to_play">How To Play</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
</resources>