<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boxOne"
        style="@style/WhiteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginWide"
        android:layout_marginTop="@dimen/marginWide"
        android:layout_marginEnd="@dimen/marginWide"
        android:text="@string/box_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginBaseline="@dimen/marginWide" />

    <TextView
        android:id="@+id/boxTwo"
        style="@style/WhiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="@dimen/marginWide"
        android:layout_marginTop="@dimen/marginWide"
        android:fontFamily="@font/roboto"
        android:text="@string/boxTwoTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOne" />

    <TextView
        android:id="@+id/boxFour"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BoxFourTxt"
        android:layout_marginStart="@dimen/marginWide"
        android:layout_marginEnd="@dimen/marginWide"
        android:layout_marginTop="@dimen/marginWide"
        android:layout_marginBottom="@dimen/marginWide"
        app:layout_constraintBottom_toTopOf="@+id/boxFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxThree" />

    <TextView
        android:id="@+id/boxThree"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginWide"
        android:layout_marginEnd="@dimen/marginWide"
        android:text="@string/BoxThreeTxt"
        app:layout_constraintBottom_toTopOf="@+id/boxFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toTopOf="@+id/boxTwo" />

    <TextView
        android:id="@+id/boxFive"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginWide"
        android:layout_marginEnd="@dimen/marginWide"
        android:text="@string/BoxFiveTxt"
        app:layout_constraintBottom_toBottomOf="@+id/boxTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxFour" />

</androidx.constraintlayout.widget.ConstraintLayout>